# CAlgorithms

./: .gitignore  CMakeLists.txt  Makefile  README.md  exec  run_tests.c
List/: List.c  ListArray.c
Test/: TestList.c
include/List/: List.h  ListArray.h  ListLinked.h
include/Test/: Test.h
include/list/: array_list.h  linked_list.h  list.h
src/List/: ListLinked.c
src/list/: CMakeLists.txt  array_list.c  linked_list.c  list.c
tests/: CMakeLists.txt  run_tests.c
tests/include/list/: test_list.h
tests/list/: CMakeLists.txt  test_array_list.c  test_linked_list.c  test_list.c
